# django_to_do_webapp

./: .gitignore  README.md  pyproject.toml
todo/todo_manager/todo/: filters.py  forms.py  models.py  serializers.py  tables.py  urls.py  views.py
todo/todo_manager/todo/migrations/: 0001_initial.py  0002_alter_task_till_when_date.py
todo/todo_manager/todo/templates/: base_generic.html  base_generic.html.html  create.html  current_todo.html  detail.html  list.html  todo.html  todo_update.html
todo/todo_manager/todo_manager/: settings.py  urls.py
