[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "django_to_do_webapp"
version = "0.1.0"
authors = [{ name = "MajorX234", email = "majorx234@googlemail.com" }]
description = "to do app"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["TODO"]
license = { text = "AGPL-3.0 license" }
dependencies = [
  "django",
  "django-tables2",
  "django-filter",
  "django-rest-framework",
  "gunicorn"
]

[project.optional-dependencies]
dev = [
  "build"
  "django-stubs",
  "pip-tools",
  "ruff",
]

[tool.autopep8]
max_line_length = 140
